--- a/toppage.html
+++ b/toppage.html
@@ -6,6 +6,7 @@
   <meta name="author" content="劉　子銘">
   <meta name="description" content="コーディング課題　level 3 せらく銀行">
   <title>せらく銀行</title>
+  <link rel="stylesheet" href="resetcss.css">
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 
