--- a/toppage.html
+++ b/toppage.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=1260">
   <meta name="author" content="劉　子銘">
   <meta name="description" content="コーディング課題　level 3 せらく銀行">
   <title>せらく銀行</title>
