--- a/toppage.html
+++ b/toppage.html
@@ -46,6 +46,13 @@
         <img src="images/main01.png" alt="main01">
         <img src="images/main02.png" alt="main02" hidden>
         <img src="images/main03.png" alt="main03" hidden>
+        <div class="left">
+          <img src="images/arrow_left.png" alt="<">
+        </div>
+        <div class="right">
+          <img src="images/arrow_right.png" alt=">">
+        </div>
+
       </div>
       <div id="thumb">
         <div class="thumb">
@@ -109,7 +116,74 @@
         </div>
       </div>
       <div id="information">
-        <h3>情報</h3>
+        <div id="infolinks">
+
+          <div class="linkbox">
+            <h3>個人のお客様</h3>
+            <div class="links">
+              <a href="#">>口座をひらく</a>
+              <a href="#">>住宅ローン</a>
+              <a href="#">>投資信託</a>
+              <a href="#">>外貨預金</a>
+              <a href="#">>バンクイック</a>
+              <a href="#">>キャンペーン一覧</a>
+            </div>
+          </div>
+
+          <div class="linkbox">
+            <h3>個人のお客様</h3>
+            <div class="links">
+              <a href="#">>口座をひらく</a>
+              <a href="#">>住宅ローン</a>
+              <a href="#">>投資信託</a>
+              <a href="#">>外貨預金</a>
+              <a href="#">>バンクイック</a>
+              <a href="#">>キャンペーン一覧</a>
+            </div>
+          </div>
+
+          <div class="linkbox">
+            <h3>個人のお客様</h3>
+            <div class="links">
+              <a href="#">>口座をひらく</a>
+              <a href="#">>住宅ローン</a>
+              <a href="#">>投資信託</a>
+              <a href="#">>外貨預金</a>
+            </div>
+          </div>
+
+          <div class="linkbox">
+            <h3>個人のお客様</h3>
+            <div class="links">
+              <a href="#">>口座をひらく</a>
+              <a href="#">>住宅ローン</a>
+              <a href="#">>投資信託</a>
+              <a href="#">>外貨預金</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div id="topics">
+          <div class="topictabs">
+            <div class="tab">
+              新着情報
+            </div>
+            <div class="tab disabled">
+              ニュースリリース
+            </div>
+            <div class="tab disabled">
+              キャンペン
+            </div>
+            <div class="tab disabled">
+              お知らせ
+            </div>
+          </div>
+          <div class="topiccontent">
+
+          </div>
+        </div>
+
       </div>
     </div>
   </main>
